Fix top spacing and complete button on admin orders

--- a/web/resources/css/adminorders.css
+++ b/web/resources/css/adminorders.css
@@ -1,8 +1,8 @@
-main {
+/* main {
   position: relative;
   top: 4.5rem;
   overflow: auto;
-}
+} */
 
 .row {
   height: 4rem;
@@ -11,6 +11,8 @@ main {
 
 #head {
   border-top: 1px solid #343a40;
+  background-color: #343a40;
+  color: #fff;
 }
 
 .cols {
@@ -27,9 +29,4 @@ main {
 
 #content .row:nth-child(odd) {
   background-color: #f2f2f2;
-}
-
-#head{
-  background-color: #343a40;
-  color: #fff;
 }
